--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,12 @@
       </footer>
     </div>
 
-
+    <div class="contact-info">
+    - Phone: 1-773-849-4188  
+    - Email: [benbcoleman08@gmail.com](mailto:benbcoleman08@gmail.com)  
+    - Linkedin: [benjamin-coleman02](https://www.linkedin.com/in/benjamin-coleman02)
+    </div>
+    
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
