--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,77 +2,59 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background: linear-gradient(to bottom, #f0f2f5, #d6dee5); /* Lighter and more subtle gradient */
+    background: #f7f9fc;
     color: #333;
     line-height: 1.6;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background: #3498db;
+    color: white;
+    padding: 1rem 0;
+    text-align: center;
+    font-family: 'Roboto Slab', serif;
 }
 
 header h1 {
-    text-align: center;
-    border-bottom: 2px solid #555; /* Softer border color */
-    padding: 10px 0;
-    font-family: 'Roboto Slab', serif;
-    color: #2c3e50; 
-}
-
-a {
-    color: #3498db; /* Changed to a soft blue */
-    text-decoration: none;
-    transition: color 0.3s;
-}
-
-a:hover {
-    color: #2980b9; /* Darker shade of the same blue for hover */
+    margin: 0;
+    font-size: 2.5rem;
 }
 
 .main-content {
     padding: 20px;
     margin: 0 auto;
-    max-width: 1000px; 
+    max-width: 1000px;
 }
 
-footer {
-    background-color: #2c3e50; /* Dark blue instead of black */
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-}
-
-.contact-info {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
-    list-style-type: none;
-    padding: 0;
-}
-
-.contact-info li {
-    background-color: #fff;
-    border: 1px solid #d1d1d1; /* Lighter border color */
-    padding: 10px;
-    border-radius: 4px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05); /* Lighter shadow */
-    transition: transform 0.3s; 
-}
-
-.contact-info li:hover {
-    transform: translateY(-5px); 
-}
-
-.contact-info a {
-    font-weight: bold;
-}
-
-/* Styling for project cards */
 .project-card {
-    background: #fff;
+    background: white;
     padding: 15px;
     border-radius: 5px;
     margin-bottom: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05); /* Consistent with other shadows */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+    transition: box-shadow 0.3s, transform 0.3s;
 }
 
 .project-card:hover {
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1); /* Slightly stronger shadow for hover */
-    transform: translateY(-5px); 
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    transform: translateY(-5px);
+}
+
+.project-card h3 a {
+    color: #3498db;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.project-card h3 a:hover {
+    color: #2980b9;
+}
+
+footer {
+    background-color: #2c3e50;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
 }
